# hsi-classifier

./: UU_work.py  app.py  main.py  production_batch_final_skip.py  pyproject.toml  requirements.txt  run_pipeline.py
src/api/src/api/: routes_2d.py
src/api/src/model/: inference_2d.py
